add missing project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 .tmp
 .DS_Store
-project.godot
+#project.godot
 test-scenes
 
 /.import
 /.vscode
 /default_env.tres
 /default_bus_layout.tres
-/icon.svg
+#/icon.svg
 /icon.png
 /icon.png.import
-/icon.svg.import
+#/icon.svg.import
 export_presets.cfg
 
 # Only add dialogic plugin 
